# Stellar-Game-Studio

./: .gitignore  Cargo.toml  test_sim.ts
circuits/hash_helper/: Nargo.toml  Prover.toml
circuits/hash_helper/src/: main.nr
circuits/move_eval/: Nargo.toml  Prover.toml  build.sh
circuits/move_eval/src/: main.nr
contracts/snake-ladders/: Cargo.toml
contracts/snake-ladders/src/: integration_test.rs  lib.rs  test.rs
contracts/snake-ladders/test_artifacts/: proof  public_inputs  vk
contracts/zk-verifier/: Cargo.toml
contracts/zk-verifier/src/: lib.rs
move_eval/: Nargo.toml
move_eval/src/: main.nr
scripts/: bindings.ts  build.ts  deploy.ts  setup.ts
scripts/utils/: contracts.ts
sgs_frontend/: check_p2.js  extract_vk.ts  extract_vk_beta9.js  index.html  package-lock.json  package.json  query_txs.js  test_sim.ts  test_spread.js  test_tx.js  tsconfig.tsbuildinfo  vite.config.ts
sgs_frontend/src/: App.css  App.tsx  config.ts  index.css
sgs_frontend/src/circuits/: hasher.json  move_eval.json  proofs.ts
sgs_frontend/src/components/: ConnectWallet.tsx  GameLayout.css  GameLayout.tsx  GamesCatalog.tsx  WalletSwitcher.css  WalletSwitcher.tsx
sgs_frontend/src/games/snake-ladders/: SnakeLaddersGame.css  SnakeLaddersGame.tsx  bindings.ts  snakeLaddersService.ts
sgs_frontend/src/hooks/: useWallet.ts
sgs_frontend/src/pages/: LandingPage.css  LandingPage.tsx
sgs_frontend/src/services/: devWalletService.ts
sgs_frontend/src/types/: navigation.ts
sgs_frontend/src/utils/: constants.ts  simulationUtils.ts  transactionHelper.ts
(+5 files in other folders)
