[package]
name = "zk-verifier"
version = "0.1.0"
edition = "2021"
publish = false

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true, features = ["alloc"] }
ark-ff = { version = "0.5", default-features = false }
ark-bn254 = { version = "0.5", default-features = false, features = ["curve"] }
hex = { version = "0.4", default-features = false, features = ["alloc"] }
once_cell = { version = "1.19", default-features = false, features = ["alloc", "race"] }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
default = ["alloc"]
alloc = ["hex/alloc", "once_cell/alloc"]
